# pypicloud-trials

./: .gitignore  README.rst  ansible.cfg  config.example.yml  pyproject.toml
docker/: Dockerfile  README.md  config.ini  gen-conf
local/: pyproject.toml
modules/: docker_push_ecr.py
playbooks/: aws-init.yml  aws.yml
playbooks/files/: cloudformation-all.yml
playbooks/files/aws/: cloudformation-pre.yml
