[tool.poetry]
name = "pypicloud-trials"
version = "0.1.0"
description = "Workspace for pypicloud-trials"
authors = ["Kazuya Takei <myself@attakei.net>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
