[tool.poetry]
name = "pypicloud-trials"
version = "2021.9"
description = "Deployment kit for pypicloud"
authors = ["Kazuya Takei <myself@attakei.net>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^4.5.0"
boto3 = "^1.18.44"
docker = "^5.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
