[tool.poetry]
name = "pypicloud-env"
version = "0.1.0"
description = ""
authors = ["Kazuya Takei <myself@attakei.net>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
pypicloud = {extras = ["server", "dynamo"], version = "^1.2.4"}

[tool.poetry.dev-dependencies]
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
